--- a/styles.scss
+++ b/styles.scss
@@ -7,121 +7,188 @@ $screen-lg-min: 1200px;
   @return ($target / $vw-context) * 1vw;
 }
 
-body {
-  font-family: Arial;
-}
+$size: 70px;
+$padding-outer: 55px;
+$padding-inner: 55px;
+$line-offset: 0;
+$inner-distance:  20px;
+$ruler-distance:  0;
+$ruler-size: 20px;
+$handle-size: 17px;
+$handle-distance: -10px;
+$offset-caption: 50px;
 
 .timeline {
   position: fixed;
-  padding: 0 25px;
-  height: 55px;
-  bottom: 0;
   z-index: 100;
-  right: 10px;
-  left: 10px;
   cursor: pointer;
-  @media (min-width: $screen-sm-min) {
-    padding: 0 get-vw(60px+15px);
-    left: get-vw(60px);
-    right: get-vw(60px);
-  }
-  @media (min-width: $screen-md-min) {
-    padding: 0 get-vw(40px+15px);
-    left: get-vw(120px);
-    right: get-vw(120px);
-  }
   background-color: white;
   color: black;
-}
-.slider-inner {
-  position: relative;
-  height: 100%;
-  &:after {
-    // BLACK LINE
-    z-index: -20;
-    content: '';
-    position: absolute;
-    left: -15px;
-    right: -15px;
-    top: 25px;
-    border-bottom: 1px solid black;
+  &.bottom {
+    padding: 0 $padding-inner;
+    height: $size;
+    bottom: 0;
+    right: $padding-outer;
+    left: $padding-outer;
+  }
+  &.right {
+    padding: $padding-inner 0;
+    width: $size;
+    right: 0;
+    top: $padding-outer;
+    bottom: $padding-outer;
+  }
+  &.left {
+    padding: $padding-inner 0;
+    width: $size;
+    left: 0;
+    top: $padding-outer;
+    bottom: $padding-outer;
   }
 }
+.slider-inner {
+  background-color: rgba(255,0,0,0.1);
+  position: relative;
+  z-index: 0;
+  .left & {
+    right: $inner-distance;
+    height: 100%;
+    border-right: 1px solid black;
+  }
+  .right & {
+    left: $inner-distance;
+    height: 100%;
+    width: $size - $inner-distance;
+    border-left: 1px solid black;
+  }
+  .bottom & {
+    top: $inner-distance;
+    width: 100%;
+    border-top: 1px solid black;
+  }
+}
+
 .slider-handle {
+  box-sizing: border-box;
   position: absolute;
-  display: inline-block;
-  top: 25px;
-  left: 0;
-  margin-left: -8px;
-  width: 16px;
-  height: 16px;
-  touch-action: pan-y;
-  border: 1px solid black;
-  background: white;
-  cursor:ew-resize;
+  width: $handle-size;
+  height: $handle-size;
+  // border: 1px solid black;
+  background: gray;
   border-radius: 50%;
+  // z-index: 10;
+  .bottom & {
+    cursor:ew-resize;
+    touch-action: pan-y;
+    top: - $handle-size/2 - 1px;
+    margin-left: - $handle-size/2;
+    left: 0;
+
+  }
+  .left & {
+    cursor:ns-resize;
+    touch-action: pan-x;
+    right: - $handle-size/2;
+    margin-top: - $handle-size/2;
+    top: 0;
+
+  }
+  .right & {
+    cursor:ns-resize;
+    touch-action: pan-x;
+    left: - $handle-size/2 - 1px;
+    margin-top: - $handle-size/2;
+    top: 0;
+  }
   &:before {
     // COVER TIMELINE with white
     z-index: -1;
     content: '';
     position: absolute;
-    $width: 44px;
-    width: $width;
-    margin-left: -$width/2;
-    height: 1px;
+    display: block;
     left: 50%;
-    top:-1px;
+    top:50%;
     background-color: white;
+    $size: 44px;
+    .bottom & {
+      margin-left: -$size/2;
+      width: $size;
+      height: 1px;
+    }
+    .left &, .right & {
+      margin-top: -$size/2;
+      height: $size;
+      width: 1px;
+    }
   }
   &:active {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
   }
 }
 .slider-ruler {
+  background-color: pink;
   font-size: 10px;
   letter-spacing: 2px;
   position: absolute;
-  left: 0;
-  right: -2px;
-  top: 32px;
-  height: 1em;
-  text-align: justify;
   user-select: none;
-  font-size: 1px;
-  &:after {
-    // NEW LINE FOR JUSTIFY
-    content: '';
-    width: 100%;
-    display: inline-block;
+  .bottom & {
+    left: 0;
+    right: 0;
+    top: $ruler-distance;
+  }
+  .left & {
+    top: 0;
+    bottom: 0;
+    right: $ruler-distance;
+  }
+  .right & {
+    top: 0;
+    bottom: 0;
+    left: $ruler-distance;
   }
   span {
-    position: relative;
-    display: inline-block;
-    width: 1px;
-    height: 20px;
-    &:before {
-      // CIRCLE
-      position: absolute;
-      top: -22px;
-      left: 50%;
+    position: absolute;
+    display: block;
+    .left & {
+      border-top: 1px solid green;
+      width: $ruler-size;
       right: 0;
-      $width: 6px;
-      font-size: $width;
-      margin-left: -$width/2;
-      transition: opacity 0.2s linear;
-      opacity: 0;
     }
+    .right & {
+      border-top: 1px solid green;
+      width: $ruler-size;
+      left: 0;
+    }
+    .bottom & {
+      border-left: 1px solid green;
+      height: $ruler-size;
+    }
+
     &:after {
       // CAPTION
-      // z-index: 100;
       content: attr(data-value);
+      background-color: pink;
       position: absolute;
-      left: -18px;
-      width: 40px;
+      z-index: 100;
+      display: block;
+      .bottom & {
+        left: -30px;
+        width: 60px;
+
+      }
+      .left & {
+        margin-top: -50%;
+        right:0;
+      }
+      .right & {
+        margin-top: -50%;
+        // right:100%;
+
+      }
       font-size: 10px;
       letter-spacing: 0;
       text-align: center;
-      transition: opacity 0.2s linear, transform 0.2s linear;
+      transition: opacity 0.2s linear, transform 0.2s linear, font-size 0.2s linear;
       opacity: 0;
       transform: translate(0,0);
     }
@@ -172,7 +239,16 @@ body {
       }
       &:after {
         opacity: 1;
-        transform: translate(0, -23px);
+        font-size: 15px;
+        .bottom & {
+          transform: translate(0, -$offset-caption);
+        }
+        .left & {
+          transform: translate($offset-caption, 0);
+        }
+        .right & {
+          transform: translate(-$offset-caption, 0);
+        }
       }
     }
     &.sibling {
@@ -183,6 +259,7 @@ body {
         opacity: 0;
       }
     }
+
   }
 }
 
