--- a/styles.scss
+++ b/styles.scss
@@ -258,12 +258,12 @@ $offset-caption: 50px;
         }
       }
     }
-    .highlight-active & {
+    .timeline .highlight-active & {
       &:before, &:after {
         opacity: 0;
       }
     }
-    &.highlight {
+    .timeline .highlight-active &.highlight {
       &:before, &:after {
         opacity: 1;
       }
