--- a/styles.css
+++ b/styles.css
@@ -163,9 +163,11 @@
     @media (min-height: 700px) {
       .left .slider-ruler span:nth-child(2n+1):before, .left .slider-ruler span:nth-child(2n+1):after, .right .slider-ruler span:nth-child(2n+1):before, .right .slider-ruler span:nth-child(2n+1):after {
         opacity: 1; } }
-    .timeline .highlight-active .slider-ruler span:before, .timeline .highlight-active .slider-ruler span:after {
+    .timeline.highlight-all .slider-ruler span:before, .timeline.highlight-all .slider-ruler span:after {
       opacity: 0; }
-    .timeline .highlight-active .slider-ruler span.highlight:before, .timeline .highlight-active .slider-ruler span.highlight:after {
+    .timeline.highlight-all .slider-ruler span.highlight:before, .timeline.highlight-all .slider-ruler span.highlight:after {
+      opacity: 1; }
+    .timeline.show-all .slider-ruler span:before, .timeline.show-all .slider-ruler span:after {
       opacity: 1; }
     .slider-ruler span.active:before {
       opacity: 0; }
