--- a/styles.css
+++ b/styles.css
@@ -125,20 +125,36 @@
       position: absolute;
       z-index: 100;
       display: block;
-      font-size: 10px;
+      font-size: 30px;
+      line-height: 1;
       letter-spacing: 0;
       text-align: center;
       transition: all 0.2s linear;
-      opacity: 0;
-      transform: translate(0, 0); }
+      opacity: 0; }
       .bottom .slider-ruler span:after {
-        left: -30px;
-        width: 60px; }
+        transform-origin: center center;
+        transform: translate3d(-50%, 0, 0) scale(0.3); }
       .left .slider-ruler span:after {
-        margin-top: -50%;
-        right: 0; }
+        right: 0;
+        transform-origin: right center;
+        transform: translate3d(0, -50%, 0) scale(0.3); }
       .right .slider-ruler span:after {
-        margin-top: -50%; }
+        transform: translate3d(0, -50%, 0) scale(0.3);
+        transform-origin: left center; }
+    .slider-ruler span.active:before {
+      opacity: 0; }
+    .slider-ruler span.active:after {
+      opacity: 1; }
+      .bottom .slider-ruler span.active:after {
+        transform: translate3d(-50%, -80px, 0) scale(1); }
+      .left .slider-ruler span.active:after {
+        transform: translate3d(80px, -50%, 0) scale(1); }
+      .right .slider-ruler span.active:after {
+        transform: translate3d(-80px, -50%, 0) scale(1); }
+    .slider-ruler span.sibling:before {
+      opacity: 0; }
+    .slider-ruler span.sibling:after {
+      opacity: 0; }
     @media (max-width: 510px) {
       .bottom .slider-ruler span:nth-child(10n+1):before, .bottom .slider-ruler span:nth-child(10n+1):after {
         opacity: 1; } }
@@ -169,21 +185,6 @@
       opacity: 1; }
     .timeline.show-all .slider-ruler span:before, .timeline.show-all .slider-ruler span:after {
       opacity: 1; }
-    .slider-ruler span.active:before {
-      opacity: 0; }
-    .slider-ruler span.active:after {
-      opacity: 1;
-      font-size: 15px; }
-      .bottom .slider-ruler span.active:after {
-        transform: translate3d(0, -50px, 0); }
-      .left .slider-ruler span.active:after {
-        transform: translate3d(50px, 0, 0); }
-      .right .slider-ruler span.active:after {
-        transform: translate3d(-50px, 0, 0); }
-    .slider-ruler span.sibling:before {
-      opacity: 0; }
-    .slider-ruler span.sibling:after {
-      opacity: 0; }
 
 .no-select, .slider-inner {
   -webkit-touch-callout: none;
